# icloud-paths

./: .gitignore  LICENSE  README.md  pyproject.toml
src/icloud_paths/: __init__.py
tests/: test_icloud_paths.py
